add angular-notifier to styles.css; add notifier-container tag to app.component.html

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
                 <div class="input-group-append">
                   <span class="input-group-text"><i class="fas fa-user"></i></span>
                 </div>
-                <input type="text" class="form-control" name="username" placeholder="Username" ngModel #usernameInput="ngModel" required>
+                <input type="text" class="form-control" name="userName" placeholder="Username" ngModel #usernameInput="ngModel" required>
               </div>
               <span class="help-block" style="color:red;" *ngIf="usernameInput.invalid && usernameInput.touched">Please enter a username</span>
               <div class="input-group mb-2">
