--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -18,7 +18,7 @@
             <i class="fa fa-users"></i>
             Users
           </a>
-          <a class="nav-item nav-link ml-3" (click)="changeTitle('Settings')" data-toggle="tab" href="#reset-password">
+          <a [hidden]="!isAdmin" class="nav-item nav-link ml-3" (click)="changeTitle('Settings')" data-toggle="tab" href="#reset-password">
             <i class="fa fa-cogs"></i>
             Settings
           </a>
@@ -39,7 +39,7 @@
           <form class="form-inline my-2 my-lg-0 justify-content-center">
             <input name="searchTerm" #searchForm="ngModel" class="form-control mr-sm-2" ngModel (ngModelChange)="searchUsers(searchForm.value)" type="search" placeholder="Search users...">
          </form>
-          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addUserModal">
+          <button [hidden]="!isAdminOrManager" type="button" class="btn btn-info" data-toggle="modal" data-target="#addUserModal">
             <i class="fa fa-plus"></i>New User
           </button>
         </div>
@@ -79,7 +79,7 @@
             <td class="">
               <div class="btn-group">
                 <button class="btn btn-outline-info" (click)="onEditUser(appUser)"><i class="fas fa-edit"></i></button>
-                <button class="btn btn-outline-danger" (click)="onDeleteUser(appUser?.userName)"><i class="fas fa-trash"></i></button>
+                <button [hidden]="!isAdmin" class="btn btn-outline-danger" (click)="onDeleteUser(appUser?.userName)"><i class="fas fa-trash"></i></button>
               </div>
             </td>
           </tr>
@@ -93,7 +93,7 @@
     </button>
 
     <!-- change password  -->
-    <div class="tab-pane fade" id="reset-password">
+    <div [hidden]="!isAdmin" class="tab-pane fade" id="reset-password">
       <form #resetPasswordForm="ngForm" (ngSubmit)="onResetPassword(resetPasswordForm)">
         <fieldset>
           <legend>User Password Management</legend>
@@ -196,8 +196,8 @@
                                 <div class="row">
                                   <div class="col mb-3">
                                     <div class="form-group">
-                                      <label>Role</label>
-                                      <select name="role" required [(ngModel)]="user.role" class="form-control">
+                                      <label>Role <small [hidden]="isAdmin">(read only)</small></label>
+                                      <select name="role" [disabled]="!isAdmin" required [(ngModel)]="user.role" class="form-control">
                                           <option value="ROLE_USER">USER</option>
                                           <option value="ROLE_HR">HR</option>
                                           <option value="ROLE_MANAGER">MANAGER</option>
@@ -347,7 +347,7 @@
     </div>
 
     <!-- model add user -->
-    <div class="modal draggable fade bd-example-modal-lg" id="addUserModal" tabindex="-1" role="dialog"
+    <div [hidden]="!isAdminOrManager" class="modal draggable fade bd-example-modal-lg" id="addUserModal" tabindex="-1" role="dialog"
       aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -376,7 +376,7 @@
                   <label for="email">Email</label>
                   <input type="email" name="email" required ngModel class="form-control">
                 </div>
-                <div class="form-group">
+                <div *ngIf="isAdmin" class="form-group">
                   <label for="authority">Role</label>
                   <select name="role" required ngModel="ROLE_USER" class="form-control">
                     <option value="ROLE_USER">USER</option>
@@ -385,6 +385,10 @@
                     <option value="ROLE_ADMIN">ADMIN</option>
                     <option value="ROLE_SUPER_ADMIN">SUPER ADMIN</option>
                   </select>
+                </div>
+                <div *ngIf="!isAdmin" class="form-group">
+                  <label for="authority">Role</label>
+                  <input type="text" name="role" required ngModel="USER" readonly class="form-control">
                 </div>
                 <div class="input-group mb-2">
                   <div class="input-group-prepend">
@@ -431,7 +435,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title text-center">Edit {{editUser?.firstName}}
-          {{editUser?.lastName}}</h5>
+          {{editUser?.lastName}} <small [hidden]="isAdminOrManager">(read only)</small></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -441,27 +445,27 @@
           <form #editUserForm="ngForm">
             <div class="form-group">
               <label for="firstName">First Name</label>
-              <input type="text" name="firstName" required
+              <input type="text" name="firstName" [disabled]="!isAdminOrManager" required
                 [(ngModel)]="editUser.firstName" class="form-control">
             </div>
             <div class="form-group">
               <label for="lastName">Last Name</label>
-              <input type="text" name="lastName" required
+              <input type="text" name="lastName" [disabled]="!isAdminOrManager" required
                 [(ngModel)]="editUser.lastName" class="form-control">
             </div>
             <div class="form-group">
               <label for="userName">Username</label>
-              <input type="text" name="userName" required
+              <input type="text" name="userName" [disabled]="!isAdminOrManager" required
                 [(ngModel)]="editUser.userName" class="form-control">
             </div>
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" name="email" required [(ngModel)]="editUser.email"
+              <input type="email" name="email" [disabled]="!isAdminOrManager" required [(ngModel)]="editUser.email"
                 class="form-control">
             </div>
             <div class="form-group">
-              <label for="authority">Role</label>
-                <select name="role" required [(ngModel)]="editUser.role" class="form-control">
+              <label for="authority">Role <small [hidden]="isAdmin">(read only)</small></label>
+                <select name="role" [disabled]="!isAdmin" required [(ngModel)]="editUser.role" class="form-control">
                   <option value="ROLE_USER">USER</option>
                   <option value="ROLE_HR">HR</option>
                   <option value="ROLE_MANAGER">MANAGER</option>
@@ -474,7 +478,7 @@
                 <span class="input-group-text">Profile Picture </span>
               </div>
               <div class="custom-file">
-                <input type="file" name="profileImage" accept="image/*"
+                <input type="file" [disabled]="!isAdminOrManager" name="profileImage" accept="image/*"
                   (change)="onProfileImageChange($event.target.files[0].name, $event.target.files[0])"
                   class="custom-file-input">
                 <label class="custom-file-label"><span [hidden]="!fileName">{{fileName}}</span>
@@ -485,16 +489,16 @@
             <fieldset class="form-group">
               <div class="form-check">
                 <label class="form-check-label">
-                  <input name="active" type="checkbox" [(ngModel)]="editUser.active"
+                  <input name="active" type="checkbox" [disabled]="!isAdminOrManager" [(ngModel)]="editUser.active"
                     class="form-check-input">
-                  Acitve
+                  Acitve <small [hidden]="isAdminOrManager">(read only)</small>
                 </label>
               </div>
               <div class="form-check disabled">
                 <label class="form-check-label">
-                  <input name="locked" type="checkbox" [(ngModel)]="editUser.notLocked"
+                  <input name="locked" type="checkbox" [disabled]="!isAdminOrManager" [(ngModel)]="editUser.notLocked"
                     class="form-check-input">
-                  Unlocked
+                  Unlocked <small [hidden]="isAdminOrManager">(read only)</small>
                 </label>
               </div>
             </fieldset>
@@ -503,7 +507,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeEditUserModalButton">Close</button>
-        <button type="button" (click)="onUpdateUser()" [disabled]="editUserForm.invalid" class="btn btn-primary">Save changes</button>
+        <button type="button" (click)="onUpdateUser()" [disabled]="editUserForm.invalid || !isAdminOrManager" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
